# Flask-AppBuilder-Skeleton

./: .replit  README.rst  app.db  pyproject.toml
app/mauro-prima/: config.py
app/mauro-prima/app/templates/: 404.html  method3.html
app/mauro-seconda/: app.db
app/mauro-seconda/app/: views.py
