[tool.poetry]
name = "repl_python3_Flask-AppBuilder-Skeleton"
version = "0.1.0"
description = ""
authors = ["progettazione <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-AppBuilder = "^4.1.1"
SQLAlchemy = "^1.4.37"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
